[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/environment/GroundCeiling.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ScrollingEnvironment.gd" type="Script" id=2]
[ext_resource path="res://assets/environment/Background.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 64 )

[node name="Environment" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -120 )

[node name="Background2" parent="." instance=ExtResource( 3 )]
position = Vector2( 6000, -120 )

[node name="GroundCeiling" parent="." instance=ExtResource( 1 )]

[node name="GroundCeiling2" parent="." instance=ExtResource( 1 )]
position = Vector2( 640, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 256, 64 )
shape = SubResource( 1 )

[connection signal="screen_exited" from="Background/VisibilityNotifier2D" to="." method="_on_background_screen_exited"]
[connection signal="screen_exited" from="Background2/VisibilityNotifier2D" to="." method="_on_background_screen_exited"]
[connection signal="screen_exited" from="GroundCeiling/VisibilityNotifier2D" to="." method="_on_ground_screen_exited"]
[connection signal="screen_exited" from="GroundCeiling2/VisibilityNotifier2D" to="." method="_on_ground_screen_exited"]

[editable path="Background"]
[editable path="Background2"]
[editable path="GroundCeiling"]
[editable path="GroundCeiling2"]
